--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Carthage/Build/.card.io-iOS-source.version
 Carthage/Build/iOS/CardIO.framework.dSYM
 CardIODynamic.xcodeproj/xcuserdata
 CardIODynamic.xcodeproj/project.xcworkspace/xcuserdata
+.swiftpm
